--- a/plugins/knowledge/src/scss/components/_editorHeader.scss
+++ b/plugins/knowledge/src/scss/components/_editorHeader.scss
@@ -9,10 +9,6 @@
   flex-wrap: wrap;
   justify-content: flex-end;
   align-items: center;
-  padding: {
-    right: $global-gutter_halfSize;
-    left: $global-gutter_halfSize;
-  }
 }
 
 .editorHeader-item {
