--- a/plugins/knowledge/src/scss/components/_pageLocation.scss
+++ b/plugins/knowledge/src/scss/components/_pageLocation.scss
@@ -15,6 +15,7 @@ $pageLocation-icon_opacity: .8;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
+    margin-top: $global-gutter_size;
     margin-bottom: $global-spacer;
     min-height: $formElement_height;
 }
